--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,14 @@
  *= require_tree .
  *= require_self
  */
+
+
+@import 'base/reset.scss';
+
+// @import 'base/colors.scss';
+// @import 'base/fonts.scss';
+// @import 'base/layout.scss';
+
+
+// @import 'components/*';
+
