--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,1 +1,11 @@
+<% if logged_in? %>
+  <script type='text/javascript'>
+    window.currentUser = {
+            "id": <%= current_user.id %>,
+            "username": "<%= current_user.username %>"
+          }
+  </script>
+<% end %>
+
+
 <main id="root"></main>
