--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,4 +1,4 @@
-<% if logged_in? %>
+<% if signed_in? %>
   <script type='text/javascript'>
     window.currentUser = {
             "id": <%= current_user.id %>,
