made some changes

--- a/app/assets/stylesheets/components/login_page.scss
+++ b/app/assets/stylesheets/components/login_page.scss
@@ -55,7 +55,7 @@
   border-width: 1px;
   border-radius: 4px;
   transition: border-color 200ms ease 0s;
-  border-color: grey;
+  border-color: rgb(236, 236, 236);
 }
 
 
