--- a/app/assets/stylesheets/components/nav_bar.scss
+++ b/app/assets/stylesheets/components/nav_bar.scss
@@ -1,18 +1,25 @@
 .nav-bar {
-
+  position: fixed;
   display: flex;
+  width: 100vw;
   // justify-content: flex-end;
   // flex-direction: row;
   justify-content: space-between;
   // justify-content: flex-end;
-  margin: 10px 0px;
+  padding: 10px 0px;
+  color: black;
+  background-color: white;
+  box-shadow: 0px 1px 4px 0px rgb(94, 94, 94);
+  // border: 3px solid #73AD21;
 }
+
 
 
 .logo {
   font-size: 26px;
   padding: 10px 10px;
   font-family: sans-serif;
+  // border: 3px solid #73AD21;
 }
 
 .dropdowns {
@@ -20,13 +27,18 @@
   padding: 10px 10px;
   font-family: sans-serif;
   display: flex;
-  justify-content: space-between;
+  // border: 3px solid #73AD21;
+}
+
+#other-nav-bar{
+  // border: 3px solid #73AD21;
 }
 
 .btn {
   font-size: 18px;
   font-weight: bold;
   font-family: sans-serif;
+  // border: 3px solid #73AD21;
 }
 
 #signup {
