demo user login working

--- a/app/assets/stylesheets/components/login_page.scss
+++ b/app/assets/stylesheets/components/login_page.scss
@@ -58,4 +58,12 @@
   border-color: rgb(236, 236, 236);
 }
 
+#login-demo {
+  // border: 1px solid black;
+  width: 300px;
+  display: flex;
+  justify-content: space-between;
+  // padding: 10px 10px; 
+}
+
 
