--- a/app/assets/stylesheets/components/signup_page.scss
+++ b/app/assets/stylesheets/components/signup_page.scss
@@ -14,11 +14,11 @@
 
 }
 
-#signup-page-right {
-  // border: 1px solid black; 
-  width: 40vw;
-  height: 60vh;
-}
+
+
+
+
+
 
 
 #signup-page-left-top {
@@ -31,6 +31,7 @@
 #signup-page-left-top-one {
   // border: 1px solid rgb(25, 0, 255); 
   font-size: 24px;
+  height: 35px;
   // font-weight: 600;
 }
 
@@ -50,33 +51,142 @@
 }
 
 #signup-page-left-top-field-names {
-  // border: 1px solid rgb(255, 0, 234); 
+  // border: 1px solid rgb(22, 4, 21); 
   display: flex;
-  // width: 50%;
+  width: 100%;
   flex-direction: row;
   justify-content: space-between;
 }
 
 #signup-page-left-top-field-names > div {
   // border: 1px solid rgb(255, 0, 234); 
-  width: 50%;
+  width: 50%; // do not change this
 }
 
-#signup-page-input-field{
+#signup-first_name {
   // border: 1px solid rgb(255, 0, 234); 
   width: 80%;
 }
 
-// #signup-page-input-field{
-//   // border: 1px solid rgb(255, 0, 234); 
-//   width: 80%;
-// }
+#signup-last_name {
+  // border: 1px solid rgb(255, 0, 234); 
+  width: 80%;
+}
+
+#signup-username {
+  // border: 1px solid rgb(255, 0, 234); 
+  width: 90%; // 50% + signup-firstname:width * .5
+  
+}
+
+#signup-password {
+  // border: 1px solid rgb(255, 0, 234); 
+  width: 90%;
+  
+}
+
+
+.signup-field {
+  // border: 1px solid rgb(255, 0, 234); 
+  height: 30px;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 4px;
+  transition: border-color 200ms ease 0s;
+  border-color: rgb(236, 236, 236);
+  background-color: rgb(245, 248, 250);
+  padding-left:10px
+}
+
+.signup-field:hover {
+  background-color: white;
+}
+
+
 
 #signup-page-left-bottom {
   // border: 1px solid rgb(255, 0, 234); 
+  height: 15%;
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+
+#signup-page-left-bottom-right {
+  // border: 1px solid rgb(255, 0, 234); 
+  height: 45%;
+  width: 53%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  
+}
+
+#signup-page-left-bottom-right > div {
+  // border: 1px solid rgb(255, 0, 234); 
+  font-size: 13px;
+  // display: flex;
+  // align-items: flex-start;
+  // justify-content: space-evenly;
+  
+}
+
+
+#signup-page-left-bottom-left {
+  // border: 1px solid rgb(255, 0, 234); 
+  height: 45%;
+  width: 40%;
+}
+
+#signup-page-login-link{
+  color: green;
+  text-decoration: none;
+}
+
+
+#signup-page-continue {
+  // border: 1px solid rgb(255, 0, 234); 
+  align-items: center;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  display: inline-flex;
+  height: 100%;
+  width: 100%;
+  justify-content: center;
+  min-width: 120px;
+  white-space: nowrap;
+  background-color: rgb(0, 200, 5);
+  color: white;
+  font-size: 14px;
+  font-weight: 900;
 }
 
 
 
 
+#signup-page-right {
+  // border: 1px solid black; 
+  width: 40vw;
+  height: 60vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background: rgb(245, 248, 250)
+}
 
+#test {
+  // border: 1px solid red;
+  height: 20%;
+  width: 30%;
+  margin-left: 10%;
+  font-size: 13px;
+  word-spacing: 1px;
+  line-height: 15px;
+  // font-family: sans-serif;
+}
+
+#signup-page-right-title{
+  font-weight: bold;
+}
