got 404 page working

--- a/app/assets/stylesheets/components/login_page.scss
+++ b/app/assets/stylesheets/components/login_page.scss
@@ -44,7 +44,7 @@
   // border: 1px solid red;
 }
 
-#login-page-login {
+.login-page-login {
   align-items: center;
   border: 1px solid green;
   border-radius: 4px;
@@ -59,7 +59,7 @@
   font-weight: 900;
 }
 
-#login-page-input-field {
+.login-page-input-field {
   // border: 1px solid red;
   width: 50%;
   height: 30px;
