added z index to 404

--- a/app/assets/stylesheets/components/404.scss
+++ b/app/assets/stylesheets/components/404.scss
@@ -3,9 +3,11 @@
   top: 30%;
   left: 50%;
   transform: translate(-50%, -50%);
-  text-align: center; }
-  .not-found h1 {
-    font-size: 70px;
-    font-weight: bolder; }
-  .not-found a {
-    font-size: 40px; }
+  text-align: center; 
+  z-index: -1;
+}
+.not-found h1 {
+  font-size: 70px;
+  font-weight: bolder; }
+.not-found a {
+  font-size: 40px; }
