--- a/app/assets/stylesheets/components/404.scss
+++ b/app/assets/stylesheets/components/404.scss
@@ -5,7 +5,10 @@
   transform: translate(-50%, -50%);
   text-align: center; 
   z-index: -1;
+  // display: none;
+  
 }
+
 .not-found h1 {
   font-size: 70px;
   font-weight: bolder; }
