--- a/app/assets/stylesheets/components/login_page.scss
+++ b/app/assets/stylesheets/components/login_page.scss
@@ -49,7 +49,7 @@
   border: 1px solid green;
   border-radius: 4px;
   display: inline-flex;
-  height: 48px;
+  height: 100%;
   justify-content: center;
   min-width: 120px;
   white-space: nowrap;
@@ -78,11 +78,9 @@
 }
 
 #login-demo {
-  // border: 1px solid black;
-  width: 300px;
+  width: 500px;
   display: flex;
   justify-content: space-between;
-  // padding: 10px 10px; 
 }
 
 
