--- a/app/assets/stylesheets/components/logged_in_nav.scss
+++ b/app/assets/stylesheets/components/logged_in_nav.scss
@@ -48,11 +48,10 @@
 
 
 
-#logged-in-dropdown > div:hover {
-  color: green;
-  cursor: pointer;
-  
-}
+// #logged-in-dropdown > div:hover {
+//   color: green;
+//   cursor: pointer;
+// }
 
 .search-bar {
   width: 70%;
@@ -70,9 +69,45 @@
 
 
 
-
-
-
-.drop-down-item {
-  // display: none;
+.dropdown {
+  position: relative;
+  display: inline-block;
 }
+
+.dropdown-content {
+  border: 1px solid red;
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  margin: 20px 0px;
+  z-index: 1;
+}
+
+.dropdown:active .dropdown-content {
+  display: block;
+}
+
+
+
+
+
+
+// .drop-down-item {
+//   display: none;
+//   position: absolute;
+//   background-color: #f9f9f9;
+//   min-width: 160px;
+//   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+//   padding: 12px 16px;
+//   z-index: 1;
+// }
+
+// .logged-in-dropdown:hover .drop-down-item {
+//   display: block;
+// }
+
+
+
+
