--- a/app/assets/stylesheets/components/logged_in_nav.scss
+++ b/app/assets/stylesheets/components/logged_in_nav.scss
@@ -15,22 +15,19 @@
   justify-content: center;
   font-size: 13px;
   height: 4vh;
-  // padding: 6px 0px;
   align-items: center;
-  // back
 }
 
-#logged-in-dropdown {
+#logged-in-dropdown-list {
   // border: 1px solid green;
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  // padding-right: 20px;
   font-weight: bold;
 }
 
 
-#logged-in-dropdown > div {
+#logged-in-dropdown-list > div {
   // border: 1px solid green;
 
   display: flex;
@@ -38,44 +35,11 @@
   justify-content: flex-end;
   margin-left: 5%;
 
-
   height: 10px;
-
   text-decoration: none;
-
-  // border: 1px solid red;
-}
-
-
-
-// #logged-in-dropdown > div:hover {
-//   color: green;
-//   cursor: pointer;
-// }
-
-.search-bar {
-  width: 70%;
-  height: 30px;
-  // display: flex;
-  border-style: solid;
-  border-width: 1px;
-  border-radius: 4px;
-  transition: border-color 200ms ease 0s;
-  border-color: rgb(236, 236, 236);
-  background-color: rgb(245, 248, 250);
-  padding-left: 50px;
-}
-
-
-
-
-.dropdown {
-  position: relative;
-  display: inline-block;
 }
 
 .dropdown-content {
-  border: 1px solid red;
   display: none;
   position: absolute;
   background-color: #f9f9f9;
@@ -85,28 +49,29 @@
   z-index: 1;
 }
 
-.dropdown:active .dropdown-content {
+#logged-in-dropdown-list > div:hover {
+  color: green;
+}
+
+
+.drop-down-show {
   display: block;
 }
 
 
 
+.search-bar {
+  width: 70%;
+  height: 30px;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 4px;
+  transition: border-color 200ms ease 0s;
+  border-color: rgb(236, 236, 236);
+  background-color: rgb(245, 248, 250);
+  padding-left: 50px;
+}
 
-
-
-// .drop-down-item {
-//   display: none;
-//   position: absolute;
-//   background-color: #f9f9f9;
-//   min-width: 160px;
-//   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-//   padding: 12px 16px;
-//   z-index: 1;
-// }
-
-// .logged-in-dropdown:hover .drop-down-item {
-//   display: block;
-// }
 
 
 
