--- a/app/assets/stylesheets/components/logged_in_nav.scss
+++ b/app/assets/stylesheets/components/logged_in_nav.scss
@@ -29,7 +29,7 @@
 
 #logged-in-dropdown-list > div {
   // border: 1px solid green;
-  cursor: pointer;
+
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
@@ -49,7 +49,8 @@
   color: black;
   position: absolute;
   background-color: #f9f9f9;
-  min-width: 160px;
+  min-width: 290px;
+  min-height: 600px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   margin: 20px 0px;
   z-index: 1;
@@ -58,18 +59,24 @@
 .dropdown-content-child {
   text-decoration: none;
   color: black;
+  border: 1px solid red;
+  min-height: 40px;
 }
 
 .dropdown-content-child:hover {
   color: red;
   text-decoration: none;
-  cursor: pointer;
+  // cursor: pointer;
 }
 
 
 .drop-down-show {
+
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
+  // align-items: center;
+  padding-left: 10px;
 }
 
 
@@ -93,3 +100,7 @@
   color: black;
 }
 
+.normal-link:hover {
+  color: green;
+  // cursor: pointer;
+}
