--- a/app/assets/stylesheets/components/logged_in_nav.scss
+++ b/app/assets/stylesheets/components/logged_in_nav.scss
@@ -44,6 +44,10 @@
 
 }
 
+.dropdown:hover {
+  cursor: pointer;
+}
+
 .dropdown-content {
   display: none;
   color: black;
@@ -51,7 +55,7 @@
   background-color: #f9f9f9;
   min-width: 290px;
   min-height: 868px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 3px 8px 10px 0px rgba(0,0,0,0.2);
   margin: 20px 0px;
   z-index: 1;
 }
@@ -76,7 +80,32 @@
 #user-info {
   height: 100px;
   border-bottom: 1px solid rgb(216, 216, 216);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  cursor: default;
   // border: 1px solid red;
+}
+
+#user-info > div {
+  font-size: 15px;
+  height: 40%;
+  // border: 1px solid red;
+  width: 85%;
+}
+
+#balance-status {
+  // border: 1px solid blue;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  
+}
+
+#balance-status > div {
+  // border: 1px solid blue;
+  width: 50%;
 }
 
 
@@ -93,8 +122,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  // align-items: center;
-  // padding-left: 10px;
 }
 
 
