--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -2,7 +2,10 @@
   <script type='text/javascript'>
     window.currentUser = {
             "id": <%= current_user.id %>,
-            "username": "<%= current_user.username %>"
+            "username": "<%= current_user.username %>",
+            "first_name": "<%= current_user.first_name %>",
+            "last_name": "<%= current_user.last_name %>",
+            "balance": "<%= current_user.balance %>"
           }
   </script>
 <% end %>
