reformatted account dropdown so it looks exactly like RH

--- a/app/assets/stylesheets/components/logged_in_nav.scss
+++ b/app/assets/stylesheets/components/logged_in_nav.scss
@@ -125,6 +125,17 @@
 }
 
 
+.dropdown-content-child > * {
+  // border: 1px solid red;
+  width: 24px;
+  padding-right: 10px;
+}
+
+
+
+
+
+
 .drop-down-show {
   // border: 1px solid red;
   display: flex;
