--- a/app/assets/stylesheets/components/logged_in_nav.scss
+++ b/app/assets/stylesheets/components/logged_in_nav.scss
@@ -5,7 +5,7 @@
 
 #logged-in-nav > div {
   // border: 1px solid red;
-  width: 32vw;
+  width: 31vw;
 }
 
 #logged-in-nav {
@@ -16,6 +16,7 @@
   font-size: 13px;
   height: 4vh;
   align-items: center;
+  padding-top: 5px;
 }
 
 #logged-in-dropdown-list {
@@ -155,7 +156,9 @@
   transition: border-color 200ms ease 0s;
   border-color: rgb(236, 236, 236);
   background-color: rgb(245, 248, 250);
-  // padding-left: 25px;
+  // margin-left: -100px;
+  // position: relative;
+
 }
 
 // .search-bar-div > * {
