added logo where necessary

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,18 @@
   <head>
     <title>PrinceJohn</title>
 
+    <%= favicon_link_tag 'logo.png' %>
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
   </head>
+
+  <script>
+    window.logo = "<%= image_url('logo.png') %>"
+  </script>
 
   <body>
     <%= yield %>
