--- a/app/assets/stylesheets/components/logged_out_nav.scss
+++ b/app/assets/stylesheets/components/logged_out_nav.scss
@@ -8,13 +8,17 @@
   box-shadow: 0px 1px 4px 0px rgb(94, 94, 94);
 }
 
+#logged-out-logo {
+  display: flex;
+  flex-direction: row;
+}
 
 
 .logo {
   font-size: 26px;
   padding: 10px 10px;
   font-family: sans-serif;
-  // border: 3px solid #73AD21;
+  // border: 1px solid #73AD21;
 }
 
 .dropdowns {
@@ -25,9 +29,9 @@
   // border: 3px solid #73AD21;
 }
 
-#other-nav-bar{
-  // border: 3px solid #73AD21;
-}
+// #other-nav-bar{
+//   // border: 3px solid #73AD21;
+// }
 
 .btn {
   font-size: 18px;
