--- a/app/assets/stylesheets/components/logged_in_home.scss
+++ b/app/assets/stylesheets/components/logged_in_home.scss
@@ -1,13 +1,14 @@
 #logged-in-bottom {
-  border: 1px solid blue;
+  // border: 1px solid blue;
   width: 55vw;
-  height: 92vh;
+  height: 91vh;
   display: flex;
   flex-direction: row;
+  margin-top: 10px;
 }
 
 #logged-in-left {
-  border: 1px solid red;
+  // border: 1px solid red;
   width: 72%;
 }
 
