--- a/app/assets/stylesheets/components/stock_bar.scss
+++ b/app/assets/stylesheets/components/stock_bar.scss
@@ -13,6 +13,24 @@
   // height: 415px;
 }
 
+.stock-name {
+  font-size: 13px;
+  font-weight: bold;
+  // border: 1px solid red;
+}
+
+// .stock-amount {
+  // border: 1px solid red;
+//   // display: inline-block;
+//   // display: flex;
+//   // flex-direction: column;
+//   height: 16px;
+//   width: 50px;
+//   font-size: 13px;
+  // overflow: hidden;
+// }
+
+
 #stock-bar > div {
   // border: 1px solid blue;
   width: 100%;
@@ -23,7 +41,7 @@
 }
 
 .bottom-border { 
-  border-bottom: 1px solid rgb(241, 241, 241);
+  border-bottom: 1px solid rgb(231, 231, 231);
 }
 
 
@@ -38,11 +56,19 @@
 }
 
 .display-stock {
-  border: 1px solid red;
-  width: 78%;
+  // border: 1px solid red;
+  width: 90%;
   min-height: 45px;
   display: flex;
 }
+
+.stock-name-amount> div{
+  // border: 1px solid red;
+  height: 16px;
+  width: 100%;
+  font-size: 13px;
+}
+
 
 .stock-name-amount {
   display: flex;
@@ -53,8 +79,8 @@
 
 
 .display-stock > div{
-  border: 1px solid blue;
-  min-width: 25%;
+  // border: 1px solid blue;
+  min-width: 30%;
 }
 
 .stock-graph {
@@ -65,6 +91,21 @@
   display: flex;
   flex-direction: column;
 }
+
+#owned-stocks > div {
+  width: 100%;
+  // border: 1px solid black;
+  display: flex;
+  justify-content: center;
+}
+
+#owned-stocks > div:hover {
+  background-color: rgb(243, 243, 243);
+  cursor: pointer;
+}
+
+
+
 
 // #stock-bar-title > div {
 //   // border: 1px solid red;
