--- a/app/assets/stylesheets/components/logged_in_nav.scss
+++ b/app/assets/stylesheets/components/logged_in_nav.scss
@@ -5,10 +5,20 @@
 }
 
 
-#logged-in-nav > div {
-  // border: 1px solid red;
-  width: 31vw;
+.search-bar-div {
+  // border: 5px solid blue;
+  display: flex;
+  flex-direction: row;
+  height: 30px;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 4px;
+  transition: border-color 200ms ease 0s;
+  border-color: rgb(236, 236, 236);
+  background-color: rgb(245, 248, 250);
+  width: 27%;
 }
+
 
 #logged-in-nav {
   // border: 1px solid blue;
@@ -17,9 +27,19 @@
   justify-content: center;
   font-size: 13px;
   height: 4vh;
+  width: 95vw;
   align-items: center;
   padding-top: 5px;
 }
+
+
+
+#filler {
+  // border: 1px solid red;
+  width: 20%;
+}
+
+
 
 #logged-in-dropdown-list {
   // border: 1px solid green;
@@ -27,6 +47,7 @@
   flex-direction: row;
   justify-content: flex-end;
   font-weight: bold;
+  width: 50%;
 }
 
 
@@ -44,12 +65,13 @@
 
 #logged-in-dropdown-list > div:hover {
   color: green;
-
 }
+
 
 .dropdown:hover {
   cursor: pointer;
 }
+
 
 .dropdown-content {
   display: none;
@@ -80,7 +102,6 @@
 
 #gold {
   color: rgb(224, 197, 45);
-  
 }
 
 
@@ -121,7 +142,6 @@
 
 
 .dropdown-content-child:hover {
-
   background-color: rgb(243, 243, 243);
   text-decoration: none;
   cursor: pointer;
@@ -134,7 +154,31 @@
   padding-right: 10px;
 }
 
+.search-show {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  color: black;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 31%;
+  box-shadow: 3px 8px 10px 0px rgba(0,0,0,0.2);
+  margin: 32px 0px;
+  z-index: 1;
+}
 
+
+.search-content {
+  display: none;
+
+  // border: 1px solid red;;
+}
+
+
+
+// div {
+//   border: 1px solid red;
+// }
 
 
 
@@ -146,27 +190,7 @@
   justify-content: space-evenly;
 }
 
-.search-bar-div {
-  // border: 1px solid blue;
-  display: flex;
-  flex-direction: row;
-  width: 70%;
-  height: 30px;
-  border-style: solid;
-  border-width: 1px;
-  border-radius: 4px;
-  transition: border-color 200ms ease 0s;
-  border-color: rgb(236, 236, 236);
-  background-color: rgb(245, 248, 250);
-  // margin-left: -100px;
-  // position: relative;
 
-}
-
-// .search-bar-div > * {
-//   border: 1px solid red;
-
-// }
 
 .search-bar-icon {
   width: 8%;
@@ -176,7 +200,6 @@
 }
 
 .search-bar {
-  // border: .01px solid red;;
   height: 90% ;
   width: 92%;
   background-color: transparent;
@@ -185,12 +208,9 @@
   padding-left: 8px;
 }
 
-
 .hide {
   display: none;
 }
-
-
 
 
 
