--- a/app/assets/stylesheets/components/logged_in_nav.scss
+++ b/app/assets/stylesheets/components/logged_in_nav.scss
@@ -154,32 +154,77 @@
   padding-right: 10px;
 }
 
+
+
 .search-show {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
+  // align-items: center;
   color: black;
   position: absolute;
   background-color: #f9f9f9;
-  min-width: 31%;
+  min-width: 25.65%;
+  height: 200px;
   box-shadow: 3px 8px 10px 0px rgba(0,0,0,0.2);
-  margin: 32px 0px;
-  z-index: 1;
+  margin: 30px 0px;
+  // border: 1px solid red;
+}
+
+.search-show > * {
+  padding-left: 25px;
+}
+
+
+
+.search-result-name {
+  display: flex;
+  width: 50%;
+  // border: 1px solid red;
+}
+
+.search-show-header {
+  font-weight: bold;
+  color: rgb(90, 90, 90);
+  // border: 1px solid red;
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
+  width: 50%;
+  height: 10%;
+
+}
+
+.test {
+  // border: 1px solid blue;
+
+  width: 90%;
+  height: 90%;
 }
 
 
 .search-content {
   display: none;
-
-  // border: 1px solid red;;
 }
 
 
 
-// div {
-//   border: 1px solid red;
-// }
+.search-result-line {
+  display: flex;
+  justify-content: space-between;
+  // border: 1px solid red;
+  width: 70%;
+  height: 20px;
+}
 
+.search-result-line-outer:hover {
+  cursor: pointer;
+  background-color: rgb(224, 224, 224);
+}
+
+.search-result-line-outer {
+  height: 23px;
+}
 
 
 
