--- a/app/assets/stylesheets/components/logged_in_nav.scss
+++ b/app/assets/stylesheets/components/logged_in_nav.scss
@@ -167,6 +167,7 @@
   height: 200px;
   box-shadow: 3px 8px 10px 0px rgba(0,0,0,0.2);
   margin: 30px 0px;
+  transition: 2s;
   // border: 1px solid red;
 }
 
