--- a/app/assets/stylesheets/components/stock_show.scss
+++ b/app/assets/stylesheets/components/stock_show.scss
@@ -1,136 +1,178 @@
 #stock-show-page {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 body {
-    cursor: default;
+  cursor: default;
 }
 
 
 #stock-show-main {
-    margin-top: 35px;
-    border: 1px solid red;
-    height: 90vh;
-    width: 60vw;
-    display: flex;
-    justify-content: space-around;
-    overflow: hidden;
+  margin-top: 35px;
+  border: 1px solid red;
+  height: 90vh;
+  width: 60vw;
+  display: flex;
+  justify-content: space-around;
+  overflow: hidden;
 }
 
 #stock-show-left {
-    border: 1px solid red;
-    height: 100%;
-    width: 60%;
+  border: 1px solid red;
+  height: 100%;
+  width: 60%;
 }
 
 #stock-show-right {
-    // border: 1px solid red;
-    height: 100%;
-    width: 25%;
+  // border: 1px solid red;
+  height: 100%;
+  width: 25%;
 }
 
 #stock-show-graph {
-    border: 1px solid red;
-    height: 51%;
-    width: 100%;
+  border: 1px solid red;
+  height: 51%;
+  width: 100%;
 }
 
 #stock-show-user-info {
-    border: 1px solid red;
-    height: 29%;
-    width: 100%;
+  border: 1px solid red;
+  height: 29%;
+  width: 100%;
 }
 
 #stock-show-upcoming-activity {
-    border: 1px solid red;
-    height: 19%;
-    width: 100%;
+  border: 1px solid red;
+  height: 19%;
+  width: 100%;
 }
 
 #stock-show-market-bar {
-    // border: 1px solid red;
-    height: 45%;
-    width: 100%;
-    box-shadow: 0px 8px 24px rgb(173, 173, 173);
-    border-radius: 6px;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+  // border: 1px solid red;
+  height: 45%;
+  width: 100%;
+  box-shadow: 0px 8px 24px rgb(173, 173, 173);
+  border-radius: 6px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 // .
 
 #stock-show-market-bar-trade {
-    height: 12%;
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+  height: 12%;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 
-    // padding-top: 20px;
+  // padding-top: 20px;
 }
 
 #stock-show-market-bar-trade > div {
-    font-size: 15px;
-    // border: 1px solid red;
+  font-size: 15px;
+  // border: 1px solid red;
+}
+
+
+#stock-show-drop-down{
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 4px;
+  overflow: hidden;
+  width: 100%;
+  height: 70%;
+}
+
+.flex-end {
+  display: flex;
+  justify-content: flex-end;
+}
+
+#stock-show-shares-input {
+  width: 50%;
+  height: 70%;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 4px;
+  text-align: right;
+  padding-right: 8px;
+  -webkit-appearance: none;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 
 
 #stock-show-market-bar-trade > div:hover {
-    color: green;
-    cursor: pointer;
+  color: #00C805;
+  cursor: pointer;
 }
 
 #filler2 {
-    width: 7%;
+  width: 7%;
 }
 
 #stock-show-market-bar-order {
-    // border: 1px solid red;
-    height: 76%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
+  height: 76%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
 
 #stock-show-market-bar-buy-power {
-    // border: 1px solid red;
-    height: 12%;
-    width: 100%;
+  // border: 1px solid red;
+  height: 12%;
+  width: 100%;
 }
 
 #stock-show-market-bar-order-top {
-    // border: 1px solid red;
-    height: 50%;
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  // border: 1px solid red;
+  height: 50%;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
     
 }
 
 #stock-show-market-bar-order-top > div {
-    // border: 1px solid red;
-    height: 30%;
-    display: flex;
-    flex-direction: row;
+  // border: 1px solid red;
+  height: 30%;
+  display: flex;
+  flex-direction: row;
 }
 
 #stock-show-market-price-sub {
-    color: green
+  color: #00C805
 }
 
 
 
 
 #stock-show-market-bar-order-top > div > div {
-    border: 1px solid red;
-    height: 100%;
-    width: 50%;
-    font-size: 13.5px;
-    display: flex;
-    align-items: center;
+  border: 1px solid blue;
+  height: 100%;
+  width: 50%;
+  font-size: 13.5px;
+  display: flex;
+  align-items: center;
+}
+
+
+#stock-show-market-bar-order-bottom {
+  border: 1px solid red;
+  height: 45%;
+  width: 80%;
+  font-size: 12px;
+  font-weight: bold;
 }
