--- a/app/assets/stylesheets/components/stock_show.scss
+++ b/app/assets/stylesheets/components/stock_show.scss
@@ -50,7 +50,6 @@ body {
 }
 
 #stock-show-market-bar {
-  // border: 1px solid red;
   height: 45%;
   width: 100%;
   box-shadow: 0px 8px 24px rgb(173, 173, 173);
@@ -73,7 +72,11 @@ body {
 }
 
 #stock-show-market-bar-trade > div {
-  font-size: 15px;
+  font-size: 14px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  font-weight: bold;
   // border: 1px solid red;
 }
 
@@ -120,6 +123,18 @@ input::-webkit-inner-spin-button {
   width: 7%;
 }
 
+.border {
+  border: 1px solid red;
+}
+
+.stock-show-chosen-transaction {
+  color: #00C805;
+  border-bottom: 2px solid #00C805;
+}
+
+
+
+
 #stock-show-market-bar-order {
   height: 76%;
   width: 100%;
@@ -133,6 +148,9 @@ input::-webkit-inner-spin-button {
   // border: 1px solid red;
   height: 12%;
   width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #stock-show-market-bar-order-top {
