--- a/app/assets/stylesheets/components/stock_show.scss
+++ b/app/assets/stylesheets/components/stock_show.scss
@@ -74,8 +74,10 @@ body {
 #stock-show-market-bar-trade > div {
   font-size: 14px;
   height: 100%;
+  width: 15%;
   display: flex;
   align-items: center;
+  justify-content: center;
   font-weight: bold;
   // border: 1px solid red;
 }
