making progress with d3

--- a/frontend/components/graph/grapher2/home.html
+++ b/frontend/components/graph/grapher2/home.html
@@ -29,29 +29,6 @@
 
 <body>
   <script>
-    //     var myData = "date	New York	San Francisco	Austin\n\
-    // 20111001	63.4	62.7	72.2\n\
-    // 20111002	58.0	59.9	67.7\n\
-    // 20111003	53.3	59.1	69.4\n\
-    // 20111004	55.7	58.8	68.0\n\
-    // 20111005	64.2	58.7	72.4\n\
-    // 20111006	58.8	57.0	77.0\n\
-    // 20111007	57.9	56.7	82.3\n\
-    // 20111008	61.8	56.8	78.9\n\
-    // 20111009	69.3	56.7	68.8\n\
-    // 20111010	71.2	60.1	68.7\n\
-    // 20111011	68.7	61.1	70.3\n\
-    // 20111012	61.8	61.5	75.3\n\
-    // 20111013	63.0	64.3	76.6\n\
-    // 20111014	66.9	67.1	66.6\n\
-    // 20111015	61.7	64.6	68.0\n\
-    // 20111016	61.8	61.6	70.6\n\
-    // 20111017	62.8	61.1	71.1\n\
-    // 20111018	60.8	59.2	70.0\n\
-    // 20111019	62.1	58.9	61.6\n\
-    // 20111020	65.1	57.2	57.4\n\
-    // 20111021	55.6	56.4	64.3\n\
-    // 20111022	54.4	60.7	72.4\n";
 
     var myData = "date	New York	San Francisco	Austin\n\
 20111001	63.4	62.7	72.2\n\
@@ -273,11 +250,12 @@
               else if (pos.x < mouse[0]) beginning = target;
               else break; //position found
             }
-
+            
             d3.select(this).select('text')
               .text(y.invert(pos.y).toFixed(2));
 
-            return "translate(" + mouse[0] + "," + pos.y + ")";
+            // return "translate(" + mouse[0] + "," + pos.y + ")";
+            return "translate(0, 0)";
           });
       });
 
