--- a/frontend/components/graph/grapher2/style.css
+++ b/frontend/components/graph/grapher2/style.css
@@ -1,25 +1,20 @@
-path {
-  stroke: steelblue;
-  stroke-width: 1;
-  fill: none;
+body {
+  font: 10px sans-serif;
 }
-.axis {
+
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
   shape-rendering: crispEdges;
 }
-.x.axis line {
-  stroke: lightgrey;
-}
-.x.axis .minor {
-  stroke-opacity: .5;
-}
+
 .x.axis path {
   display: none;
 }
-.y.axis line, .y.axis path {
-  fill: none;
-  stroke: #000;
-}
 
-/* text {
-  font-size: 30px;
-} */
+.line {
+  fill: none;
+  stroke: steelblue;
+  stroke-width: 1.5px;
+}
