added to react, working out the bugs right now

--- a/app/assets/stylesheets/components/stock_show.scss
+++ b/app/assets/stylesheets/components/stock_show.scss
@@ -37,6 +37,12 @@ body {
   width: 100%;
 }
 
+#stock-show-graph > * {
+  border: 1px solid red;
+  // height: 51%;
+  // width: 100%;
+}
+
 #stock-show-user-info {
   // border: 1px solid red;
   height: 29%;
