integrated with react and its working, need to refactor some stuff

--- a/app/assets/stylesheets/components/stock_show.scss
+++ b/app/assets/stylesheets/components/stock_show.scss
@@ -31,13 +31,13 @@ body {
   width: 25%;
 }
 
-#stock-show-graph {
-  // border: 1px solid red;
+#stock-show-graph-div {
+  border: 1px solid red;
   height: 51%;
   width: 100%;
 }
 
-#stock-show-graph > * {
+#stock-show-graph {
   border: 1px solid red;
   // height: 51%;
   // width: 100%;
