added links to search bar, need to add close function

--- a/app/assets/stylesheets/components/logged_in_nav.scss
+++ b/app/assets/stylesheets/components/logged_in_nav.scss
@@ -223,6 +223,8 @@
   width: 100%;
   display: flex;
   align-items: center;
+  text-decoration: none;
+  color: black;
   // justify-content: center;
   // border: 1px solid red;
 }
