--- a/app/assets/stylesheets/components/logged_in_nav.scss
+++ b/app/assets/stylesheets/components/logged_in_nav.scss
@@ -164,7 +164,7 @@
   position: absolute;
   background-color: #f9f9f9;
   min-width: 25.65%;
-  height: 200px;
+  max-height: 200px;
   box-shadow: 3px 8px 10px 0px rgba(0,0,0,0.2);
   margin: 30px 0px;
   transition: 2s;
@@ -232,7 +232,7 @@
 
 .search-show-results {
   // border: 1px solid blue;
-  height: 160px;
+  max-height: 160px;
 }
 
 
