--- a/app/assets/stylesheets/components/logged_in_nav.scss
+++ b/app/assets/stylesheets/components/logged_in_nav.scss
@@ -165,9 +165,10 @@
   background-color: #f9f9f9;
   min-width: 25.65%;
   max-height: 200px;
-  box-shadow: 3px 8px 10px 0px rgba(0,0,0,0.2);
+  box-shadow: 1px 3px 5px 0px rgba(0,0,0,0.2);
   margin: 30px 0px;
   transition: 2s;
+  overflow: hidden;
   // border: 1px solid red;
 }
 
@@ -187,7 +188,9 @@
   padding-left: 20px;
   width: 50%;
   height: 10%;
-
+  min-height: 40px;
+  display: flex;
+  align-items: center;
 }
 
 .test {
