--- a/app/assets/stylesheets/components/stock_show.scss
+++ b/app/assets/stylesheets/components/stock_show.scss
@@ -58,6 +58,19 @@ body {
 
 }
 
+.stock-show-market-bar-comp {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.stock-show-market-bar-comp > div {
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
 
 
 #stock-show-upcoming-activity {
@@ -67,7 +80,7 @@ body {
 }
 
 #stock-show-market-bar {
-  height: 45%;
+  min-height: 20%;
   width: 100%;
   box-shadow: 0px 8px 24px rgb(173, 173, 173);
   border-radius: 6px;
@@ -76,7 +89,19 @@ body {
   flex-direction: column;
 }
 
-// .
+.stock-show-market-bar-comp {
+  height: 50px;
+  width: 100%;
+  border: 1px solid red;
+}
+
+#stock-show-market-bar-button {
+  height: 80px;
+  width: 100%;
+  border: 1px solid red;
+}
+
+
 
 #stock-show-market-bar-trade {
   height: 12%;
@@ -112,7 +137,7 @@ body {
 }
 
 #stock-show-shares-input {
-  width: 50%;
+  width: 60%;
   height: 70%;
   border-style: solid;
   border-width: 1px;
