stock show bar looks and functions great, need to connect buy and sell to it

--- a/app/assets/stylesheets/components/stock_bar.scss
+++ b/app/assets/stylesheets/components/stock_bar.scss
@@ -44,6 +44,11 @@
   border-bottom: 1px solid rgb(231, 231, 231);
 }
 
+.top-border { 
+  border-top: 1px solid rgb(231, 231, 231);
+}
+
+
 
 #stock-bar-title {
   // border: 1px solid green;
